fixed responsiveness of expense tracker on smaller screens

--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -1,32 +1,52 @@
-@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --body-bg-color: #f7f7f7;
+  --white: #fff;
+  --list-color: #333;
+  --color: #000;
 }
 
 * {
   box-sizing: border-box;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    --body-bg-color: #0a0a0a;
+    --white: rgb(63, 63, 63);
+    --list-color: rgb(219, 219, 219);
+    --color: #f4f4f4bd;
+  }
+}
+
 body {
-  background-color: #f7f7f7;
+  background-color: var(--body-bg-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: "Lato", sans-serif;
+  padding: 0.5rem;
+  font-family: 'Lato', sans-serif;
+  color: var(--color);
+  transition: all 0.5s ease-in-out;
+  position: relative;
 }
 
 .container {
   margin: 30px auto;
-  width: 350px;
+  width: 300px;
+  width: 100%;
+  max-width: 450px;
 }
 
 h1 {
   letter-spacing: 1px;
   margin: 0;
+  word-wrap: break-word;
 }
 
 h3 {
@@ -41,7 +61,7 @@ h4 {
 }
 
 .inc-exp-container {
-  background-color: #fff;
+  background-color: var(--white);
   box-shadow: var(--box-shadow);
   padding: 20px;
   display: flex;
@@ -52,6 +72,7 @@ h4 {
 .inc-exp-container > div {
   flex: 1;
   text-align: center;
+  max-width: 50%;
 }
 
 .inc-exp-container > div:first-of-type {
@@ -62,6 +83,7 @@ h4 {
   font-size: 20px;
   letter-spacing: 1px;
   margin: 5px 0;
+  overflow-x: auto;
 }
 
 .money.plus {
@@ -77,8 +99,8 @@ label {
   margin: 10px 0;
 }
 
-input[type="text"],
-input[type="number"] {
+input[type='text'],
+input[type='number'] {
   border: 1px solid #dedede;
   border-radius: 2px;
   display: block;
@@ -112,13 +134,13 @@ input[type="number"] {
 }
 
 .list li {
-  background-color: #fff;
+  background-color: var(--white);
   box-shadow: var(--box-shadow);
-  color: #333;
+  color: var(--list-color);
   display: flex;
   justify-content: space-between;
   position: relative;
-  padding: 10px;
+  padding: 10px 24px 10px 10px;
   margin: 10px 0;
 }
 
@@ -128,6 +150,20 @@ input[type="number"] {
 
 .list li.minus {
   border-right: 5px solid #c0392b;
+}
+
+.list span {
+  display: flex;
+  min-height: 100%;
+  height: max-content;
+  min-width: 4rem;
+  max-width: 30%;
+  justify-content: flex-end;
+  align-items: center;
+  align-self: center;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .delete-btn {
@@ -140,8 +176,8 @@ input[type="number"] {
   padding: 2px 5px;
   position: absolute;
   top: 50%;
-  left: 0;
-  transform: translate(-100%, -50%);
+  right: 0;
+  transform: translate(0%, -50%);
   opacity: 0;
   transition: opacity 0.3s ease;
 }
